[package]
name = "boguin"
version = "0.1.0"
authors = ["Pyfisch <pyfisch@gmail.com>"]
repository = "https://github.com/pyfisch/boguin"
description = "simple HTTP client"
license = "MIT/Apache-2.0"
keywords = ["http", "client"]

[features]
default = ["native-tls"]
rust_tls = ["rustls", "webpki", "webpki-roots"]

[dependencies]
http-with-url = "0.2.0"
httparse = "1.2.4"
log = "0.4.1"
native-tls = { version = "0.1.5", optional = true }
rustls = { version = "0.12.0", optional = true }
webpki = { version = "^0.18.0-alpha", optional = true }
webpki-roots = { version = "^0.14.0", optional = true }

[dev-dependencies]
ansi_term = "0.11.0"
clap = "2.31.2"
env_logger = "0.5.10"

